--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url(https://fonts.googleapis.com/css?family=Comfortaa:300,regular,500,600,700);
+@import url(https://fonts.googleapis.com/css?family=Amatic+SC:regular,700);
+
 .App {
   text-align: center;
 }
